--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "You can use the [editor on GitHub](https://github.com/thearc08/thearc08.github.io/edit/main/README.md) to maintain and preview the content for your website in Markdown files.",
   "main": "index.js",
-  "scripts": { "start": "lite-server"},
-
+  "scripts": {
+    "start": "lite-server"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/thearc08/thearc08.github.io.git"
@@ -18,5 +19,8 @@
   "homepage": "https://github.com/thearc08/thearc08.github.io#readme",
   "devDependencies": {
     "lite-server": "^2.5.4"
+  },
+  "dependencies": {
+    "bulma": "^0.9.1"
   }
 }
